# hyprdusk

./: Cargo.toml  README.md
scss/: main.scss  variables.scss
src/: main.rs  style.css
src/services/: hyprland.rs  mod.rs  mpris.rs  systray.rs
src/widgets/: date.rs  media_controls.rs  mod.rs  systray.rs  windowtitle.rs  workspaces.rs
