[package]
name = "hyprdusk"
description = "My personalized desktop environment for Hyprland"
repository = "https://github.com/sploders101/hyprdusk"
license = "GPL-3.0-only"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.7"
gdk = "0.18.0"
gio = "0.18.3"
glib = "0.18.3"
grass = { version = "0.13.1", features = ["macro"] }
gtk = "0.18.1"
gtk-layer-shell = "0.8.0"
hyprland = "0.3.12"
mpris = "2.0.1"
system-tray = "0.1.4"
tokio = { version = "1.34.0", features = ["full"] }
